Partial_14Dec2021/force-app/main/default/objects/inventory__c/inventory__c.object-meta.xml
<CustomObject>
    <description>Object created to hold the data of the inventory</description>
    <label>inventory</label>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>inventories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>