Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Closing_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Closing_Stocks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Closing Stocks</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>