Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Color_Language_Size__c.field-meta.xml
<CustomField>
    <fullName>Color_Language_Size__c</fullName>
    <label>Color/Language/Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Description__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ENGLISH</fullName>
            </value>
            <value>
                <fullName>HINDI</fullName>
            </value>
            <value>
                <fullName>GUJARATI</fullName>
            </value>
            <value>
                <fullName>MARATI</fullName>
            </value>
            <value>
                <fullName>KANNADA</fullName>
            </value>
            <value>
                <fullName>TELUGU</fullName>
            </value>
            <value>
                <fullName>TAMIL</fullName>
            </value>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>VIOLET</fullName>
            </value>
            <value>
                <fullName>INDIGO</fullName>
            </value>
            <value>
                <fullName>BLUE</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
            <value>
                <fullName>YELLOW</fullName>
            </value>
            <value>
                <fullName>ORANGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>