Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Dispatch_Size__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Size__c</fullName>
    <label>Dispatch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>