Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Is_CSO_User1__c.field-meta.xml
<CustomField>
    <fullName>Is_CSO_User1__c</fullName>
    <formula>if(IsCSO_User__c == true, &quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCSO User</label>
    <type>Text</type>
</CustomField>