Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Is_Depo_User1__c.field-meta.xml
<CustomField>
    <fullName>Is_Depo_User1__c</fullName>
    <formula>if(Is_Depo_User__c ==true, &quot;True&quot;,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Depo User</label>
    <type>Text</type>
</CustomField>