Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Is_Depo_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Depo_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Depo User</label>
    <type>Checkbox</type>
</CustomField>