Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/IsCSO_User__c.field-meta.xml
<CustomField>
    <fullName>IsCSO_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCSO User</label>
    <type>Checkbox</type>
</CustomField>