Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/opening_stock__c.field-meta.xml
<CustomField>
    <fullName>opening_stock__c</fullName>
    <label>Opening Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>