Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>inventories</relationshipName>
    <type>Lookup</type>
</CustomField>