Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>COLUMN</fullName>
            </value>
            <value>
                <fullName>CASING</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>AQUALIFE</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>PAN CONNECTORS</fullName>
            </value>
            <value>
                <fullName>SILENT SWR</fullName>
            </value>
            <value>
                <fullName>UNDER GROUND</fullName>
            </value>
            <value>
                <fullName>AAV</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>SILENT PLUS</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>PLUMBING</fullName>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>MEGA</fullName>
            </value>
            <value>
                <fullName>SWR_PUSHFIT</fullName>
            </value>
            <value>
                <fullName>SWR_SOLFIT</fullName>
            </value>
            <value>
                <fullName>SWR SILENT</fullName>
            </value>
            <value>
                <fullName>SWR SILENT PLUS</fullName>
            </value>
            <value>
                <fullName>UNDERGROUND</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>