Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LEAFLETS</fullName>
            </value>
            <value>
                <fullName>HAND BILL</fullName>
            </value>
            <value>
                <fullName>STICKERS</fullName>
            </value>
            <value>
                <fullName>BANNERS</fullName>
            </value>
            <value>
                <fullName>SCROLL 3&apos;x2&apos;</fullName>
            </value>
            <value>
                <fullName>STALL TENT</fullName>
            </value>
            <value>
                <fullName>FLEX BOARD 6&apos; x 3&apos;</fullName>
            </value>
            <value>
                <fullName>FLEX BOARD 8&apos; x 4&apos;</fullName>
            </value>
            <value>
                <fullName>POP BOARDS</fullName>
            </value>
            <value>
                <fullName>TECHNICAL MANUAL</fullName>
            </value>
            <value>
                <fullName>PRICELIST - ALL INDIA</fullName>
            </value>
            <value>
                <fullName>PRICELIST - TAMILNADU</fullName>
            </value>
            <value>
                <fullName>PIPE SELECTION BOOK</fullName>
            </value>
            <value>
                <fullName>THERMOFOAM BOARD</fullName>
            </value>
            <value>
                <fullName>PRICELIST FOLDERS</fullName>
            </value>
            <value>
                <fullName>CORPORATE BROUCHER (EXCELLENCE TO BRILLANCE)</fullName>
            </value>
            <value>
                <fullName>APPLICATION FORM (CHANNEL PARTNERSHIP)</fullName>
            </value>
            <value>
                <fullName>CORPORATE  LEAFLETS</fullName>
            </value>
            <value>
                <fullName>BLUE TAPE (SHELF STICKERS)</fullName>
            </value>
            <value>
                <fullName>WHITE FOLDER</fullName>
            </value>
            <value>
                <fullName>STANDEES</fullName>
            </value>
            <value>
                <fullName>ALL PRODUCT CLUSTER_STANDEES</fullName>
            </value>
            <value>
                <fullName>MULTI USE KNIFE</fullName>
            </value>
            <value>
                <fullName>TORCHE_EVEREADY</fullName>
            </value>
            <value>
                <fullName>TORCH_NIPPO</fullName>
            </value>
            <value>
                <fullName>UMBRELLA</fullName>
            </value>
            <value>
                <fullName>ASHIRVAD KEY CHAIN -  ENGLISH</fullName>
            </value>
            <value>
                <fullName>LEATHER  KEY CHAIN</fullName>
            </value>
            <value>
                <fullName>LEATHERITE PURSE</fullName>
            </value>
            <value>
                <fullName>LUNCH BOX_TRAVEL MATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>