Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Received_Stock__c.field-meta.xml
<CustomField>
    <fullName>Received_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Received Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>