Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCT COLLATERALS</fullName>
            </value>
            <value>
                <fullName>GIFT ITEMS</fullName>
            </value>
            <value>
                <fullName>PACKING MATERIALS</fullName>
            </value>
            <value>
                <fullName>SAMPLES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>