Partial_14Dec2021/force-app/main/default/objects/inventory__c/fields/Type_Of_Meet__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Meet__c</fullName>
    <label>Type Of Meet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mega Meet</fullName>
            </value>
            <value>
                <fullName>Mini Meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>